# active_push_triage

./: .gitignore  README.md  analyze_current_run.py  setup.py
dummy_log/: eval_env_1.monitor.csv  eval_env_16.monitor.csv  eval_env_2.monitor.csv  eval_env_20.monitor.csv  eval_env_24.monitor.csv  eval_env_4.monitor.csv  eval_env_8.monitor.csv  train_env_0.monitor.csv  train_env_1.monitor.csv  train_env_10.monitor.csv  train_env_11.monitor.csv  train_env_12.monitor.csv  train_env_13.monitor.csv  train_env_14.monitor.csv  train_env_15.monitor.csv  train_env_16.monitor.csv  train_env_17.monitor.csv  train_env_18.monitor.csv  train_env_19.monitor.csv  train_env_2.monitor.csv  train_env_20.monitor.csv  train_env_21.monitor.csv  train_env_22.monitor.csv  train_env_23.monitor.csv  train_env_3.monitor.csv  train_env_4.monitor.csv  train_env_5.monitor.csv  train_env_6.monitor.csv  train_env_7.monitor.csv  train_env_8.monitor.csv  train_env_9.monitor.csv
evaluations_suite/: plot_action_jitter.py  plot_manipulability.py  plot_steps_to_success.py  plot_success_heatmap.py  plot_trajectories.py
scratch/: analyze_runs.py  benchmark_fps.py  benchmark_fps_4096.py  benchmark_results.json  check_90_percent.py  check_all_ppo.py  check_data.py  check_dr.py  check_ppo_csv.py  check_ppo_fps.py  check_ppo_fps_comparison.py  check_ppo_tags.py  check_sac_20m.py  check_sac_max.py  check_sac_tags.py  check_time.py  check_time_tb.py  check_wall_time.py  compare_ppo_sac.py  extract_all_sac.py  gerar_curvas_aprendizado.py  gerar_curvas_tempo.py  gerar_grafico_fps.py  gerar_grafico_fps_curvas.py  gerar_graficos_finais_tcc.py  gerar_imagem_spawn.py  get_final_stats.py  get_fps.py  list_tags.py  run_final_training.ps1  run_scalable_benchmark.py  run_videos.ps1  test_camera.py
scratch/dummy_log/: eval_env_16.monitor.csv  train_env_0.monitor.csv  train_env_1.monitor.csv  train_env_10.monitor.csv  train_env_11.monitor.csv  train_env_12.monitor.csv  train_env_13.monitor.csv  train_env_14.monitor.csv  train_env_15.monitor.csv  train_env_2.monitor.csv  train_env_3.monitor.csv  train_env_4.monitor.csv  train_env_5.monitor.csv  train_env_6.monitor.csv  train_env_7.monitor.csv  train_env_8.monitor.csv  train_env_9.monitor.csv
ur3_push/: CMakeLists.txt  package.xml
ur3_push_control/: CMakeLists.txt  package.xml  ur3_push_control_plugin.xml
ur3_push_control/cfg/: Controller.cfg
ur3_push_control/include/ur3_push_control/: joint_velocity_push_controller.h
ur3_push_control/src/: joint_velocity_push_controller.cpp
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_192627/logs/: config.txt
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_192911/logs/: progress.csv
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_193131/logs/: config.txt  progress.csv
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_193935/logs/: progress.csv
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_194324/logs/: config.txt  progress.csv
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_200350/evaluation/: best_policy  evaluations.npz
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_200350/logs/: config.txt  progress.csv
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_201410/evaluation/: best_policy  evaluations.npz
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20260618_201410/logs/: config.txt  progress.csv
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20M_20260618_215858/evaluation/: best_policy  evaluations.npz
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20M_20260618_215858/logs/: config.txt  progress.csv
ur3_push_data/rl/MujocoUR3PushEnv_cylinder_sac_v1_20M_20260618_224101/evaluation/: best_policy  (+1 more)
ur3_push_mujoco/: CMakeLists.txt  __init__.py  package.xml
ur3_push_mujoco/assets/: camera.xml  panda_fingertip.xml  panda_pokingStick.xml  push_world_base.xml  push_world_panda_fingertip.xml  push_world_panda_pokingStick.xml  push_world_ur3_base.xml  virtual_sensorpos_fingertip.xml
ur3_push_mujoco/assets/meshes/visual/: poking_stick_for_ubi.stl
ur3_push_mujoco/assets/urdf/: camera.urdf.xacro  panda_pokingStick.urdf.xacro  poking_stick_fingertip.urdf.xacro  ur3_robot.xml
ur3_push_mujoco/autoencoder/: VAE.py  generate_images.py  train_VAE.py
ur3_push_mujoco/gym_ur3_push/: __init__.py
ur3_push_mujoco/gym_ur3_push/envs/: base_goal_env.py  base_push_env.py
ur3_push_mujoco/gym_ur3_push/envs/mujoco/: ur3_push_base_env.py  ur3_push_env.py  ur3_push_simple_env.py  ur3_push_simple_warp_env.py  warp_vec_env.py
ur3_push_mujoco/utils/: controller_utils.py  image_utils.py  mujoco_utils.py  rendering_utils.py  ros_utils.py  rotations_utils.py  validate_mjwarp.py
ur3_push_rl_sb3/: __init__.py  custom_callbacks.py  custom_features_extractors.py  evaluate_policy.py  evaluate_warp_video.py  make_envs.py  train.py  utils.py
ur3_push_sim2real/: CMakeLists.txt  __init__.py  package.xml
ur3_push_sim2real/config/: controller_config.yaml  fixed_EE_trafo.yaml
ur3_push_sim2real/eval/: evaluate_policy.py
ur3_push_sim2real/launch/: collision_monitor.launch  ur3_push.launch  ur3_push_with_marker.launch
ur3_push_sim2real/nodes/: collision_monitor  dt_vicon_scene_spawner
ur3_push_sim2real/scripts/: interactive_marker.py  set_fixed_EE_trafo.py
(+282 files in other folders)
