<?xml version="1.0"?>
<package format="2">
  <name>ur3_push</name>
  <version>1.0.0</version>
  <description>The panda push package</description>
  <maintainer email="lbergmann@techfak.uni-bielefeld.de">Lara Bergmann</maintainer>
  <author email="lbergmann@techfak.uni-bielefeld.de">Lara Bergmann</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ur3_push_mujoco</exec_depend>
  <exec_depend>ur3_push_control</exec_depend>
  <exec_depend>ur3_push_sim2real</exec_depend>
  
  <export>
    <metapackage/>
  </export>

</package>
