<?xml version="1.0"?>
<package format="2">
  <name>ur3_push_control</name>
  <version>1.0.0</version>
  <description>The UR3 push control package</description>
  <maintainer email="lbergmann@techfak.uni-bielefeld.de">Lara Bergmann</maintainer>
  <author email="lbergmann@techfak.de">Lara Bergmann</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>controller_manager</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/ur3_push_control_plugin.xml" />
  </export>

</package>
