<?xml version="1.0"?>
<package format="2">
  <name>ur3_push_sim2real</name>
  <version>1.0.0</version>
  <description>ur3_push sim2real package</description>
  <maintainer email="lbergmann@techfak.uni-bielefeld.de">Lara Bergmann</maintainer>

  <author email="lbergmann@techfak.uni-bielefeld.de">Lara Bergmann</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>ur3_push_control</exec_depend>
  <exec_depend>ur3_push_mujoco</exec_depend>
  
  <export>
  </export>

</package>
